<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_new_login">Create New Login</string>
    <string name="welcome">Welcome!</string>
    <string name="shoe_store">Shoe Store</string>
    <string name="next">Next</string>
    <string name="instructions">Instructions:</string>
    <string name="instructions_text">Click the Next Button to see the Shoe List</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="company">Company</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>
