<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".shoeList.AddShoeFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="@dimen/medium_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            style="@style/LabelStyle" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            style="@style/FieldStyle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size"
            style="@style/LabelStyle" />

        <EditText
            android:id="@+id/editSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/size"
            android:inputType="numberDecimal"
            style="@style/FieldStyle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company"
            style="@style/LabelStyle" />

        <EditText
            android:id="@+id/editCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company"
            style="@style/FieldStyle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            style="@style/LabelStyle" />

        <EditText
            android:id="@+id/editDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            style="@style/FieldStyle" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:text="@string/save"
            style="@style/ButtonStyle"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/medium_margin"
            android:fontFamily="@font/roboto"
            android:text="@string/cancel"/>

    </LinearLayout>

</layout>